--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "gulp build"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "browser-sync": "^2.27.10",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
